--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>edu.nd.bshi.FindKthShortestPath</mainClass>
+                            <mainClass>edu.nd.bshi.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
