--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>neo4j</artifactId>
             <version>1.9.4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
