--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>0.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
